Fixed unreadable preview. Added graceful shutdown. Added improved responsive view.

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -61,6 +61,13 @@ footer > a:hover {
   margin-bottom: 20px;
 }
 #info-container > a {
+  line-height: 1.2;
+}
+#info-container > .content > .center {
+  border-top: 1px solid gray;
+  color: gray;
+}
+#info-container > a {
   color: inherit;
   text-decoration: none;
 }
@@ -157,6 +164,9 @@ footer > a:hover {
 }
 #info-container {
   border-bottom: 0.5px solid gray;
+}
+#info-container > .content > .center {
+  padding-top: 30px;
 }
 #info-container > .content > .post-platforms {
   margin: 0px auto 0px auto;
