--- a/app/src/mobile.css
+++ b/app/src/mobile.css
@@ -1,10 +1,8 @@
-/* iPhone 6/7/8/X */
-@media screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
   #page-frame > #heading {
     padding: 0px;
     text-align: center;
     margin: 0 auto;
-    /* width: 50%; */
     margin-bottom: 20px;
   }
   #heading > .logo {
@@ -14,10 +12,6 @@
   #heading > span:last-child {
     display: none;
   }
-  /* #main-container {
-    margin: 0 auto;
-    margin: 0px;
-  } */
   #posts-container {
     height: 40%;
     width: 100%;
@@ -30,10 +24,15 @@
     overflow: hidden;
     margin-bottom: 20px;
   }
+  #filter-container {
+    grid-column-gap: 10px;
+  }
+  #filter-container  > div > p {
+    font-size: 10px ;
+  }
   #filter-container  > div > h1 {
-    font-size: 10px;
+    font-size: 13px ;
     padding-bottom: 10px;
-    border-bottom: 1px solid gray;
   }
 
   .tab-list {
@@ -77,7 +76,7 @@
   }
 }
 /* Galaxy S5 */
-@media screen and (max-width: 640px) {
+@media only screen and (max-width: 640px) {
   #page-frame > #heading {
     padding: 0px;
     text-align: center;
@@ -109,12 +108,16 @@
     overflow: hidden;
     margin-bottom: 20px;
   }
-  #filter-container  > div > h1 {
-    font-size: 10px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid gray;
+  #filter-container {
+    grid-column-gap: 10px;
   }
-
+  #filter-container  > div > p {
+    font-size: 10px ;
+  }
+  #filter-container  > div > h1 {
+    font-size: 13px ;
+    padding-bottom: 10px;
+  }
   .tab-list {
     display: flex;
     justify-content: space-evenly;
@@ -155,8 +158,8 @@
     font-size: 10px;
   }
 }
-
-@media screen and (max-width: 768px) {
+/* iPhone 6/7/8/X */
+@media only screen and (max-width: 768px) {
   #heading {
     padding-top: 30px;
     text-align: center;
@@ -186,10 +189,16 @@
     overflow: hidden;
     margin-bottom: 20px;
   }
+  #filter-container {
+    grid-column-gap: 10px;
+  }
   #filter-container  > div > h1 {
-    font-size: 12px;
+    font-size: 12px ;
     padding-bottom: 10px;
-    border-bottom: 1px solid gray;
+  }
+  #filter-container  > div > p {
+    color: rgb(170, 170, 170);
+    font-size: 10px;
   }
   .tab-list {
     display: flex;
@@ -225,13 +234,9 @@
   .post-image img {
     padding-left: 10px;
   }
-  #filter-container  > div > p {
-    color: rgb(170, 170, 170);
-    font-size: 12px;
-  }
 }
 
-@media screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   #heading {
     padding-top: 30px;
     text-align: center;
@@ -261,10 +266,14 @@
     overflow: hidden;
     margin-bottom: 20px;
   }
+  #filter-container {
+    grid-column-gap: 10px;
+  }
+  #filter-container  > div > p {
+    font-size: 15px ;
+  }
   #filter-container  > div > h1 {
-    font-size: 15px;
     padding-bottom: 10px;
-    border-bottom: 1px solid gray;
   }
   .tab-list {
     display: flex;
@@ -297,9 +306,5 @@
   }
   .post-image img {
     padding-left: 10px;
-  }
-  #filter-container  > div > p {
-    color: rgb(170, 170, 170);
-    font-size: 15px;
   }
 }
